--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,9 @@
         android:layout_height="wrap_content"
         android:text="SEND BROADCAST"
         android:id="@+id/sendbroadcastbutton"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete BROADCAST"
+        android:id="@+id/deletebroadcastbutton"/>
 </LinearLayout>
